Updating SBT and Scala